webp images added

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
      <!-- Navbar Component -->
      <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid logoImg">
-            <img src="/photos/ROGER SHOOTS white LOGO (2).png" alt="">
+            <img src="/photos/ROGER SHOOTS white LOGO (2).webp" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,7 +46,7 @@
 
     <div class="space">
         <div class="about-container">
-            <img src="/photos/FB_IMG_1644992851433.jpg" alt="">
+            <img src="/photos/FB_IMG_1644992851433.webp" alt="">
         </div>
         <div class="about-text">
             <h4 class="text-center">THIS IS RAJAT</h4>
@@ -66,10 +66,10 @@
           </div>
           <div class="col-right">
           <a href="https://www.linkedin.com/in/rajat-chhetri-aaa462265/">
-                <img src="/photos/LinkedinLogo.png" alt="LinkedIn" />
+                <img src="/photos/LinkedinLogo.webp" alt="LinkedIn" />
             </a>
             <a href="https://www.instagram.com/_im.roger_/">
-                <img src="/photos/InstagramLogo.png" alt="Instagram" />
+                <img src="/photos/InstagramLogo.webp" alt="Instagram" />
             </a>
                     <p>Copyright 2022 ©   RAJAT CHHETRI</p>
             </div>
