--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Navbar Component -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid logoImg">
-      <img src="/photos/ROGER SHOOTS white LOGO (2).png" alt="">
+      <img src="/photos/ROGER SHOOTS white LOGO (2).webp" alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -56,17 +56,17 @@
     <div class="position-absolute top-50 start-50 translate-middle">
       <div class="hover-image" id="hoverImage">
         <!-- Main image -->
-        <img src="/photos/FB_IMG_1644992851433.jpg" alt="" style="width: 15vw; border-radius: 50%; transition: opacity 0.3s ease;">
+        <img src="/photos/FB_IMG_1644992851433.webp" alt="" style="width: 15vw; border-radius: 50%; transition: opacity 0.3s ease;">
         <!-- Social media icons -->
         <div class="socials" id="social">
           <a href="https://www.instagram.com/_im.roger_/">
-            <img src="/photos/InstagramLogo.png" alt="">
+            <img src="/photos/InstagramLogo.webp" alt="">
           </a>
           <a href="https://www.linkedin.com/in/rajat-chhetri-aaa462265/">
-            <img src="/photos/LinkedinLogo.png" alt="">
+            <img src="/photos/LinkedinLogo.webp" alt="">
           </a>
           <a href="https://www.instagram.com/_im.roger_/">
-            <img src="/photos/TwitterLogo.png" alt="">
+            <img src="/photos/TwitterLogo.webp" alt="">
           </a>
         </div>
       </div>
@@ -99,37 +99,37 @@
     <h2 class="text-center">SELECTED CLIENTS</h2>
     <div class="row">
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/honda.jpg" class="img-fluid img-100" alt="" />
+        <img src="/photos/honda.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/Hyundai.png" class="img-fluid img-100" alt="" />
+        <img src="/photos/Hyundai.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/Hyaat.jpg" class="img-fluid img-100" alt="" />
+        <img src="/photos/Hyaat.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/foresta.jpg" class="img-fluid img-100" alt="" />
+        <img src="/photos/foresta.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/kavasaki.jfif" class="img-fluid img-100" alt="" />
+        <img src="/photos/kavasaki.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/husqverna.jpg" class="img-fluid img-100" alt="" />
+        <img src="/photos/husqverna.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/ktm.jfif" class="img-fluid img-100" alt="" />
+        <img src="/photos/ktm.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/ducati.jfif" class="img-fluid img-100" alt="" />
+        <img src="/photos/ducati.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/Royal_Enfield-logo.png" class="img-fluid img-100" alt="" />
+        <img src="/photos/Royal_Enfield-logo.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/bougainvillea.png" class="img-fluid img-100" alt="" />
+        <img src="/photos/bougainvillea.webp" class="img-fluid img-100" alt="" />
       </div>
       <div class="col-md-2 mt-4 custom-col-width">
-        <img src="/photos/yezdi.png" class="img-fluid img-100" alt="" />
+        <img src="/photos/yezdi.webp" class="img-fluid img-100" alt="" />
       </div>
     </div>
   </div>
@@ -139,13 +139,13 @@
     <h2 class="text-center">PHOTOS</h2>
     <div class="allVideo">
       <div class="col-md-3">
-        <img src="/photos/image4.jpg" alt="">
+        <img src="/photos/image4.webp" alt="">
       </div>
       <div class="col-md-3">
-        <img src="/photos/image5.jpg" alt="">
+        <img src="/photos/image5.webp" alt="">
       </div>
       <div class="col-md-3">
-        <img src="/photos/image6.jpg" alt="">
+        <img src="/photos/image6.webp" alt="">
       </div>
     </div>
     <hr>
@@ -160,15 +160,16 @@
       </div>
       <div class="col-right">
         <a href="https://www.linkedin.com/in/rajat-chhetri-aaa462265/">
-          <img src="/photos/LinkedinLogo.png" alt="LinkedIn" />
+          <img src="/photos/LinkedinLogo.webp" alt="LinkedIn" />
         </a>
         <a href="https://www.instagram.com/_im.roger_/">
-          <img src="/photos/InstagramLogo.png" alt="Instagram" />
+          <img src="/photos/InstagramLogo.webp" alt="Instagram" />
         </a>
         <p>Copyright 2022 © RAJAT CHHETRI</p>
       </div>
     </div>
   </div>
+
   <!-- Bootstrap JS scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
