--- a/photos.html
+++ b/photos.html
@@ -14,7 +14,7 @@
       <!-- Navbar Component -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid logoImg">
-            <img src="/photos/ROGER SHOOTS white LOGO (2).png" alt="">
+            <img src="/photos/ROGER SHOOTS white LOGO (2).webp" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,7 +45,7 @@
 
     <header>
         <div class="container-header position-relative">
-            <img src="/photos/photosHeader.jpg" alt="" class="img-fluid">
+            <img src="/photos/photosHeader.webp" alt="" class="img-fluid">
             <h1 class="text-center position-absolute top-50 start-50 translate-middle m-0">PHOTOGRAPHY</h1>
         </div>
     </header>
@@ -53,24 +53,24 @@
     <main>
         <div class="container mt-3 d-flex justify-content-center" style="gap: 5px;">
             <div class="leftImages">
-                <img src="/photos/image1.jpg" alt="">
+                <img src="/photos/image1.webp" alt="">
                 <div class="row">
                     <div class="col-md-2 w-50 mt-1">
-                        <img src="/photos/image2.jpg" alt="">
+                        <img src="/photos/image2.webp" alt="">
                     </div>
                     <div class="col-md-2 w-50 mt-1">
-                        <img src="/photos/image3.jpg" alt="">
+                        <img src="/photos/image3.webp" alt="">
                     </div>
                 </div>
             </div>
             <div class="rightImages">
-                <img src="/photos/image4.jpg" alt="">
+                <img src="/photos/image4.webp" alt="">
                 <div class="row">
                     <div class="col-md-2 w-50 mt-1">
-                        <img src="/photos/image5.jpg" alt="">
+                        <img src="/photos/image5.webp" alt="">
                     </div>
                     <div class="col-md-2 w-50 mt-1">
-                        <img src="/photos/image6.jpg" alt="">
+                        <img src="/photos/image6.webp" alt="">
                     </div>
                 </div>
             </div>
@@ -78,24 +78,24 @@
 
         <div class="container mt-1 mb-5 d-flex justify-content-center" style="gap: 5px;">
             <div class="leftImages">
-                <img src="/photos/image7.jpg" alt="">
+                <img src="/photos/image7.webp" alt="">
                 <div class="row">
                     <div class="col-md-2 w-50 mt-1">
-                        <img src="/photos/image8.jpg" alt="">
+                        <img src="/photos/image8.webp" alt="">
                     </div>
                     <div class="col-md-2 w-50 mt-1">
-                        <img src="/photos/image9.jpg" alt="">
+                        <img src="/photos/image9.webp" alt="">
                     </div>
                 </div>
             </div>
             <div class="rightImages">
-                <img src="/photos/image10.jpg" alt="">
+                <img src="/photos/image10.webp" alt="">
                 <div class="row">
                     <div class="col-md-2 w-50 mt-1">
-                        <img src="/photos/image11.jpg" alt="">
+                        <img src="/photos/image11.webp" alt="">
                     </div>
                     <div class="col-md-2 w-50 mt-1">
-                        <img src="/photos/image12.jpg" alt="">
+                        <img src="/photos/image12.webp" alt="">
                     </div>
                 </div>
             </div>
@@ -112,10 +112,10 @@
             </div>
             <div class="col-right">
             <a href="https://www.linkedin.com/in/rajat-chhetri-aaa462265/">
-                  <img src="/photos/LinkedinLogo.png" alt="LinkedIn" />
+                  <img src="/photos/LinkedinLogo.webp" alt="LinkedIn" />
               </a>
               <a href="https://www.instagram.com/_im.roger_/">
-                  <img src="/photos/InstagramLogo.png" alt="Instagram" />
+                  <img src="/photos/InstagramLogo.webp" alt="Instagram" />
               </a>
                       <p>Copyright 2022 ©   RAJAT CHHETRI</p>
               </div>
