--- a/videos.html
+++ b/videos.html
@@ -14,7 +14,7 @@
      <!-- Navbar Component -->
      <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid logoImg">
-            <img src="/photos/ROGER SHOOTS white LOGO (2).png" alt="">
+            <img src="/photos/ROGER SHOOTS white LOGO (2).webp" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -84,10 +84,10 @@
               </div>
               <div class="col-right">
               <a href="https://www.linkedin.com/in/rajat-chhetri-aaa462265/">
-                    <img src="/photos/LinkedinLogo.png" alt="LinkedIn" />
+                    <img src="/photos/LinkedinLogo.webp" alt="LinkedIn" />
                 </a>
                 <a href="https://www.instagram.com/_im.roger_/">
-                    <img src="/photos/InstagramLogo.png" alt="Instagram" />
+                    <img src="/photos/InstagramLogo.webp" alt="Instagram" />
                 </a>
                         <p>Copyright 2022 ©   RAJAT CHHETRI</p>
                 </div>
